--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -457,3 +457,15 @@ a.dropdown-item:hover {
 a.nav-link:hover {
   color: #007bff;
 }
+
+.breadcrumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: .25rem;
+  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-size: .875rem;
+  padding: 0rem 1rem;
+}
+
+li.breadcrumb-item.active::before {
+  content: none;
+}
