--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,12 @@
 // Styling for the footer
+
 footer {
   padding: 50px 0 65px;
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.2) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#33000000',GradientType=0 );
+
   .list-inline {
     margin: 0;
     padding: 0;
@@ -10,4 +16,5 @@ footer {
     margin-bottom: 0;
     text-align: center;
   }
+
 }
