--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 20px;
+  font-size: 18px;
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
 }
@@ -239,7 +239,7 @@ header.masthead .site-heading {
 
 header.masthead .page-heading h1,
 header.masthead .site-heading h1 {
-  font-size: 50px;
+  font-size: 45px;
   margin-top: 0;
 }
 
@@ -256,7 +256,7 @@ header.masthead .site-heading .subheading {
 @media only screen and (min-width: 768px) {
   header.masthead .page-heading h1,
   header.masthead .site-heading h1 {
-    font-size: 80px;
+    font-size: 70px;
   }
 }
 
@@ -454,6 +454,13 @@ footer .copyright {
   color: #6c757d;
   border-top: 1px solid #dee2e6;
   border-bottom: 1px solid #dee2e6;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#11000000',GradientType=0 );
 }
 
 a.dropdown-item:hover {
