--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap - Clean Blog v5.0.1 (https://startbootstrap.com/template-overviews/clean-blog)
- * Copyright 2013-2018 Start Bootstrap
+ * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
  */
 
@@ -417,4 +417,14 @@ footer .copyright {
 .btn-lg {
   font-size: 16px;
   padding: 25px 35px;
+}
+
+h3 {
+  font-weight: 700;
+}
+
+.editor {
+  width: 100%;
+  height: 100px;
+  display: none;
 }
