--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -88,6 +88,10 @@ img::-moz-selection {
   background: transparent;
 }
 
+em {
+  font-weight: bold;
+}
+
 #mainNav {
   position: absolute;
   border-bottom: 1px solid #e9ecef;
