--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -96,6 +96,10 @@ blockquote.note {
   color: #000;
 }
 
+p.note {
+  font-style: italic;
+}
+
 #mainNav {
   position: absolute;
   border-bottom: 1px solid #e9ecef;
