--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Clean Blog v5.0.1 (https://startbootstrap.com/template-overviews/clean-blog)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
- */
-
 body {
   font-size: 20px;
   color: #212529;
@@ -98,6 +92,9 @@ blockquote.note {
 
 p.note {
   font-style: italic;
+  background-color: #dee2e6;
+  border-radius: 0.25rem;
+  padding: 1em;
 }
 
 pre code {
