--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -111,6 +111,10 @@ code.language-java {
   font-style: italic;
 }
 
+.exc .ans {
+  display: block;
+}
+
 #mainNav {
   position: absolute;
   border-bottom: 1px solid #e9ecef;
