--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -21,7 +21,7 @@ header.masthead {
     background-image: none;
      @media only screen and (min-width: 768px) {
       
-      background-image: url(/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-2d-logo.gif);
+      background-image: url(/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-vektor.svg);
       background-repeat: no-repeat;
       background-size: 131px;
       background-position: right;
