--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -107,6 +107,10 @@ img::-moz-selection {
   font-weight: 800;
   letter-spacing: 1px;
   text-transform: uppercase;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 1px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -210,7 +214,7 @@ header.masthead .container {
 
 @media only screen and (min-width: 768px) {
   header.masthead .container {
-    background-image: url(/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-2d-logo.gif);
+    background-image: url(/fileadmin/templates/rhenania2018/img/rhenania-hinsbeck-vektor.svg);
     background-repeat: no-repeat;
     background-size: 131px;
     background-position: right;
