--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -109,7 +109,7 @@ img::-moz-selection {
   text-transform: uppercase;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  padding: 5px;
+  padding: 7px;
   margin: 1px;
 }
 
@@ -134,6 +134,7 @@ img::-moz-selection {
   #mainNav .navbar-nav > li.nav-item > a {
     padding: 10px 20px;
     color: #fff;
+    border: none;
   }
   #mainNav .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > a:hover {
     color: rgba(255, 255, 255, 0.8);
