--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -28,7 +28,7 @@
         text-transform: uppercase;
         border: 1px solid #e5e5e5;
         border-radius: 5px;
-        padding: 5px;
+        padding: 7px;
         margin: 1px;
         @media only screen and (max-width: 992px) {
           i { display:none }
@@ -52,6 +52,7 @@
         > a {
           padding: 10px 20px;
           color: $white;
+          border: none;
           &:focus,
           &:hover {
             color: fade-out($white, .2);
