Added all Fluid default templates

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -496,3 +496,15 @@ li.breadcrumb-item.active::before {
 .table-triped td {
   padding: 1px;
 }
+
+a.btn.btn-outline-dark.btn-sm.nav-item.nav-link.active.mr-1.mb-1 > i {
+  color: #fff !important;
+}
+
+a.btn.btn-outline-dark.btn-sm.nav-item.nav-link.active.mr-1.mb-1:hover > i {
+  color: #fff !important;
+}
+
+a.btn.btn-outline-dark.btn-sm.nav-item.nav-link.mr-1.mb-1:hover > i {
+  color: #dee2e6 !important;
+}
