--- a/layouts/Mainlayout.html
+++ b/layouts/Mainlayout.html
@@ -29,7 +29,7 @@
             </div>
           </div>
           <div class="row">
-              <div class="col-lg-8 col-md-10 mx-auto">
+              <div class="col-lg-12 col-md-12 mx-auto">
                   {f:cObject(typoscriptObjectPath:'lib.breadcrump')->f:format.raw()}
               </div>
           </div>
@@ -63,5 +63,8 @@
           </div>
         </div>
       </footer>
-      <f:debug>{_all}</f:debug>
+      <f:comment>
+          <f:debug>{_all}</f:debug>
+      </f:comment>
+      
       
