font size smaller

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 18px;
+  font-size: 16px;
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
 }
@@ -20,6 +20,22 @@ h5,
 h6 {
   font-weight: 800;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+h2, h2 {
+  font-size: 1.75rem;
+}
+
+h3, h3 {
+  font-size: 1.5rem;
+}
+
+h4, h4 {
+  font-size: 1.5rem;
+}
+
+h5, h5 {
+  font-size: 1.25rem;
 }
 
 a {
