--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,6 +1,6 @@
 // Global styling for this template
 body {
-  font-size: 18px;
+  font-size: 16px;
   color: $gray-900;
   @include serif-font;
 }
@@ -20,6 +20,19 @@ h5,
 h6 {
   font-weight: 800;
   @include sans-serif-font;
+}
+
+h2, h2 {
+  font-size: 1.75rem;
+}
+h3, h3 {
+  font-size: 1.5rem;
+}
+h4, h4 {
+  font-size: 1.5rem;
+}
+h5, h5 {
+  font-size: 1.25rem;
 }
 
 a {
