--- a/Layouts/Default.html
+++ b/Layouts/Default.html
@@ -4,7 +4,7 @@
 		<f:then>
 			<f:if condition="{data.layout} == 0">
 				<f:then>	
-					<div id="c{data.uid}" class="mb-3 card shadow frame frame-{data.frame_class} frame-type-{data.CType} frame-layout-{data.layout}{f:if(condition: data.space_before_class, then: ' frame-space-before-{data.space_before_class}')}{f:if(condition: data.space_after_class, then: ' frame-space-after-{data.space_after_class}')}">
+					<div id="c{data.uid}" class="mb-3 card frame frame-{data.frame_class} frame-type-{data.CType} frame-layout-{data.layout}{f:if(condition: data.space_before_class, then: ' frame-space-before-{data.space_before_class}')}{f:if(condition: data.space_after_class, then: ' frame-space-after-{data.space_after_class}')}">
 						<div class="card-body">
 				</f:then>
 				<f:else>
