--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -76,6 +76,14 @@ a.btn.btn-outline-dark.btn-sm.nav-item.nav-link.mr-1.mb-1:hover > i {
   color: $gray-300 !important;
 }
 
+a.dropdown-item {
+  text-decoration: none;
+}
+
+.breadcrumb a {
+  text-decoration: none;
+}
+
 
 
 
