--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -22,6 +22,7 @@
   .navbar-nav {
     > li.nav-item {
       > a {
+        text-decoration: none;
         font-size: 12px;
         font-weight: 800;
         letter-spacing: 1px;
@@ -50,6 +51,7 @@
     .navbar-nav {
       > li.nav-item {
         > a {
+          text-decoration: none;
           padding: 10px 20px;
           color: $white;
           border: none;
