some css changes

--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -95,6 +95,9 @@ a.dropdown-item {
     background-color: transparent;
     border: none;
   }
+  .img-thumbnail {
+    background-color: transparent;
+  }
 }
 
 
