added new layout

--- a/Layouts/Default.html
+++ b/Layouts/Default.html
@@ -5,13 +5,30 @@
 			<f:if condition="{data.layout} == 0">
 				<f:then>	
 					<div id="c{data.uid}" class="mb-3 card frame frame-{data.frame_class} frame-type-{data.CType} frame-layout-{data.layout}{f:if(condition: data.space_before_class, then: ' frame-space-before-{data.space_before_class}')}{f:if(condition: data.space_after_class, then: ' frame-space-after-{data.space_after_class}')}">
+						<f:render section="Header" optional="true">
+							<f:variable name="headerClass">card-header</f:variable>
+							<f:render partial="Header/All" arguments="{_all}" />
+						</f:render>
 						<div class="card-body">
+							<f:if condition="{data._LOCALIZED_UID}">
+								<a id="c{data._LOCALIZED_UID}"></a>
+							</f:if>
+							<f:render section="Before" optional="true">
+								<f:render partial="DropIn/Before/All" arguments="{_all}" />
+							</f:render>
+							<f:render section="Main" optional="true" />
+							<f:render section="Footer" optional="true">
+								<f:render partial="Footer/All" arguments="{_all}" />
+							</f:render>
+							<f:render section="After" optional="true">
+								<f:render partial="DropIn/After/All" arguments="{_all}" />
+							</f:render>				
+						</div>
+					</div>
 				</f:then>
 				<f:else>
 					<div id="c{data.uid}" class="frame frame-{data.frame_class} frame-type-{data.CType} frame-layout-{data.layout}{f:if(condition: data.space_before_class, then: ' frame-space-before-{data.space_before_class}')}{f:if(condition: data.space_after_class, then: ' frame-space-after-{data.space_after_class}')}">
 						<div class="">			
-				</f:else>
-			</f:if>
 							<f:if condition="{data._LOCALIZED_UID}">
 								<a id="c{data._LOCALIZED_UID}"></a>
 							</f:if>
@@ -30,6 +47,8 @@
 							</f:render>
 					</div>
 				</div>
+				</f:else>
+			</f:if>
 
 		</f:then>
 		<f:else>
