--- a/Partials/Header/Header.html
+++ b/Partials/Header/Header.html
@@ -2,32 +2,32 @@
 <f:if condition="{header}">
 	<f:switch expression="{layout}">
 		<f:case value="1">
-			<h1 class="{positionClass}">
+			<h1 class="{positionClass} {headerClass}">
 				<f:link.typolink parameter="{link}">{header}</f:link.typolink>
 			</h1>
 		</f:case>
 		<f:case value="2">
-			<h2 class="{positionClass}">
+			<h2 class="{positionClass} {headerClass}">
 				<f:link.typolink parameter="{link}">{header}</f:link.typolink>
 			</h2>
 		</f:case>
 		<f:case value="3">
-			<h3 class="{positionClass}">
+			<h3 class="{positionClass} {headerClass}">
 				<f:link.typolink parameter="{link}">{header}</f:link.typolink>
 			</h3>
 		</f:case>
 		<f:case value="4">
-			<h4 class="{positionClass}">
+			<h4 class="{positionClass} {headerClass}">
 				<f:link.typolink parameter="{link}">{header}</f:link.typolink>
 			</h4>
 		</f:case>
 		<f:case value="5">
-			<h5 class="{positionClass}">
+			<h5 class="{positionClass} {headerClass}">
 				<f:link.typolink parameter="{link}">{header}</f:link.typolink>
 			</h5>
 		</f:case>
 		<f:case value="6">
-			<h6 class="{positionClass}">
+			<h6 class="{positionClass} {headerClass}">
 				<f:link.typolink parameter="{link}">{header}</f:link.typolink>
 			</h6>
 		</f:case>
@@ -40,6 +40,7 @@
 					header: header,
 					layout: default,
 					positionClass: positionClass,
+					headerClass: headerClass,
 					link: link}" />
 			</f:if>
 		</f:defaultCase>
