--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -27,6 +27,7 @@ h5,
 h6 {
   font-weight: 800;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #000000;
 }
 
 a {
@@ -98,6 +99,7 @@ img::-moz-selection {
 #mainNav .navbar-brand {
   font-weight: 800;
   color: #343a40;
+  font-size: 150%;
 }
 
 #mainNav .navbar-toggler {
@@ -113,6 +115,7 @@ img::-moz-selection {
   font-weight: 800;
   letter-spacing: 1px;
   text-transform: uppercase;
+  font-size: 100%;
 }
 
 @media only screen and (min-width: 992px) {
@@ -122,14 +125,14 @@ img::-moz-selection {
   }
   #mainNav .navbar-brand {
     padding: 10px 20px;
-    color: #fff;
+    color: #000;
   }
   #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
     color: rgba(255, 255, 255, 0.8);
   }
   #mainNav .navbar-nav > li.nav-item > a {
     padding: 10px 20px;
-    color: #fff;
+    color: #000;
   }
   #mainNav .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > a:hover {
     color: rgba(255, 255, 255, 0.8);
@@ -178,7 +181,7 @@ img::-moz-selection {
 header.masthead {
   margin-bottom: 50px;
   background: no-repeat center center;
-  background-color: #868e96;
+  background-color: #ffffff;
   background-attachment: scroll;
   position: relative;
   background-size: cover;
@@ -188,7 +191,7 @@ header.masthead .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 0%;
   width: 100%;
   background-color: #212529;
   opacity: 0.5;
@@ -417,4 +420,20 @@ footer .copyright {
 .btn-lg {
   font-size: 16px;
   padding: 25px 35px;
+}
+/*!
+ * for the first page slideshow of images
+ */
+
+.carousel-item {
+  margin-top: 5%;
+  margin-right: 5%;
+  height: 95vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 90%;
+  background-position: center;
 }
