--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -178,8 +178,9 @@ img::-moz-selection {
   }
 }
 
+/* edit the page header and how much of a bottom margin*/
 header.masthead {
-  margin-bottom: 50px;
+  margin-bottom: 0px;
   background: no-repeat center center;
   background-color: #ffffff;
   background-attachment: scroll;
@@ -200,7 +201,7 @@ header.masthead .overlay {
 header.masthead .page-heading,
 header.masthead .post-heading,
 header.masthead .site-heading {
-  padding: 200px 0 150px;
+  padding: 125px 0 50px;
   color: white;
 }
 
@@ -208,7 +209,7 @@ header.masthead .site-heading {
   header.masthead .page-heading,
   header.masthead .post-heading,
   header.masthead .site-heading {
-    padding: 200px 0;
+    padding: 100px 0;
   }
 }
 
@@ -229,14 +230,14 @@ header.masthead .site-heading .subheading {
   font-weight: 300;
   line-height: 1.1;
   display: block;
-  margin: 10px 0 0;
+  margin: 0px 0 0;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 @media only screen and (min-width: 768px) {
   header.masthead .page-heading h1,
   header.masthead .site-heading h1 {
-    font-size: 80px;
+    font-size: 50px;
   }
 }
 
@@ -436,4 +437,13 @@ footer .copyright {
   -o-background-size: 100%;
   background-size: 90%;
   background-position: center;
+}
+
+.img {
+  height: 100%;
+  width: 75%;
+  background-position: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
