--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,4 +1,4 @@
-/*!
+roboto/*!
  * Start Bootstrap - Clean Blog v5.0.5 (https://startbootstrap.com/template-overviews/clean-blog)
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
@@ -28,7 +28,7 @@ h5,
 h6
 {
   font-weight: 800;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #000000;
 }
 
@@ -93,13 +93,13 @@ img::-moz-selection {
   position: absolute;
   border-bottom: 1px solid #e9ecef;
   background-color: white;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #mainNav .navbar-brand {
   font-weight: 800;
   color: #343a40;
-  font-size: 150%;
+  font-size: 200%;
 }
 
 #mainNav .navbar-toggler {
@@ -198,6 +198,7 @@ header.masthead .overlay {
   opacity: 0.5;
 }
 
+/*edits the space between the top and the navbar*/
 header.masthead .page-heading,
 header.masthead .post-heading,
 header.masthead .site-heading {
@@ -205,6 +206,7 @@ header.masthead .site-heading {
   color: black;
 }
 
+/*edits the space between the top and the navbar*/
 @media only screen and (min-width: 768px) {
   header.masthead .page-heading,
   header.masthead .post-heading,
@@ -231,7 +233,7 @@ header.masthead .site-heading .subheading {
   line-height: 1.1;
   display: block;
   margin: 0px 0 0;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 @media only screen and (min-width: 768px) {
@@ -255,7 +257,7 @@ header.masthead .post-heading .subheading {
   font-size: 24px;
   font-weight: 600;
   margin: 10px 0 30px;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 header.masthead .post-heading .meta {
@@ -400,15 +402,14 @@ footer .copyright {
 
 
 .btn {
-
-  font-weight: 800;
+  font-weight: 500;
   padding: 15px 25px;
   letter-spacing: 1px;
   /*text-transform: uppercase;*/
   border-radius: 0;
-  color: #000000;
-  font-size: 85%;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  font-size: 95%;
+  font-family: 'Abel', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .btn-primary {
@@ -457,19 +458,20 @@ footer .copyright {
 
 .text{
   margin-left: 20px;
+
   margin-top: 0em;
   font-size: 1em;
 }
 
 .title{
   font-weight: 800;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #000000;
 }
 
 .servicetitle{
   font-weight: 800;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #000000;
   text-align: center;
 }
@@ -483,4 +485,113 @@ footer .copyright {
 
 .leftnav {
   margin-left: 30px;
+}
+
+.nbtext-block{
+  position: absolute;
+  top: 45%;
+  right: 0px;
+  width: 45%;
+  height: 10%;
+  background-color: #0085A1;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+
+
+  font-weight: 100;
+  font-family: 'Abel', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+  vertical-align: baseline;
+  font-size: 4em;
+}
+
+.c211text-block {
+  position: absolute;
+  top: 60%;
+  left: 0px;
+  width: 30%;
+  height: 10%;
+  background-color: #0085A1;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+
+
+  font-weight: 100;
+  font-family: 'Abel', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+  vertical-align: baseline;
+  font-size: 4em;
+
+}
+
+.chinesetext-block {
+  position: absolute;
+  top: 10%;
+  left: 0px;
+  width: 45%;
+  height: 10%;
+  background-color: #0085A1;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+
+
+  font-weight: 100;
+  font-family: 'Abel', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+  vertical-align: baseline;
+  font-size: 4em;
+
+}
+
+.biotext-block {
+  position: absolute;
+  top: 10%;
+  left: 0px;
+  width: 35%;
+  height: 10%;
+  background-color: #0085A1;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+
+
+  font-weight: 100;
+  font-family: 'Abel', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+  vertical-align: baseline;
+  font-size: 4em;
+
+}
+
+.bio2text-block {
+  position: absolute;
+  top: 25%;
+  left: 0px;
+  width: 40%;
+  height: 10%;
+  background-color: #0085A1;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+
+
+  font-weight: 100;
+  font-family: 'Abel', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+  vertical-align: baseline;
+  font-size: 4em;
+
 }
