--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -74,7 +74,7 @@ img::-moz-selection {
   background: transparent;
 }
 
-em, p.em {
+em, p.em, td.em {
 	font-weight: bold;
 }
 
@@ -110,5 +110,5 @@ code.language-java {
 
 table.benchmark {
   @include sans-serif-font;
-  font-size: 12pt;
+  font-size: 11pt;
 }
