--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -79,7 +79,7 @@ img::-moz-selection {
   background: transparent;
 }
 
-em, p.em, td.em {
+em, p.em {
   font-weight: bold;
 }
 
@@ -114,16 +114,6 @@ code.language-java {
 
 .exc .ans {
   display: block;
-}
-
-table.benchmark {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 11pt;
-}
-
-p.legend {
-  font-style: italic;
-  margin: 15px 0;
 }
 
 #mainNav {
