add video header attempt 2

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -184,6 +184,21 @@ header.masthead {
   background-size: cover;
 }
 
+header.masthead video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
 header.masthead .overlay {
   position: absolute;
   top: 0;
@@ -207,6 +222,8 @@ header.masthead .site-heading {
   header.masthead .site-heading {
     padding: 200px 0;
   }
+  header.masthead video {
+    display: none;
 }
 
 header.masthead .page-heading,
