--- a/Partials/Header/Date.html
+++ b/Partials/Header/Date.html
@@ -1,9 +1,9 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:if condition="{date}">
-	<p class="{positionClass} pl-3">
+	<h3 class="{positionClass} pl-3">
 		<time class="badge badge-secondary" datetime="{date -> f:format.date(format: '%Y-%m-%d')}">
-			<f:format.date format="%B %e, %Y">{date}</f:format.date>
+			<f:format.date format="%d.%m.%Y">{date}</f:format.date>
 		</time>
-	</p>
+	</h3>
 </f:if>
 </html>
