added list all posts and list one post

--- a/views/index.edge
+++ b/views/index.edge
@@ -17,4 +17,32 @@
     </div>
   </header>
  
+  <!-- Main Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        @each(post in posts)
+          <div class="post-preview">
+          <a href="/post/{{ post._id }}">
+              <h2 class="post-title">
+                {{ post.title }}
+              </h2>
+            </a>
+            <p class="post-meta">Posted by
+              <a href="#">{{ post.username }}</a>
+              on {{ post.createdAt.toDateString() }}
+            </p>
+          </div>
+          <hr>
+        @endeach
+        <!-- Pager -->
+        <div class="clearfix">
+          <a class="btn btn-primary float-right" href="#">Posts Antigos &rarr;</a>
+        </div>
+      </div>
+    </div>
+  </div>
+   
+  <hr>
+
 @endsection
