--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -144,9 +144,15 @@ img::-moz-selection {
   #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
     color: rgba(255, 255, 255, 0.8);
   }
+  #mainNav .navbar-nav > li.nav-item {
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+    margin-left: 10px;
+    border: 1px solid #ccc;
+  }
   #mainNav .navbar-nav > li.nav-item > a {
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 10px 18px;
     color: #fff;
     border: none;
   }
@@ -479,7 +485,7 @@ footer .copyright {
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#11000000',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#11000000', GradientType=0);
 }
 
 a.dropdown-item:hover {
@@ -493,7 +499,7 @@ a.nav-link:hover {
 .breadcrumb {
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: .25rem;
-  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: .875rem;
   padding: 0rem 1rem;
 }
@@ -504,7 +510,7 @@ li.breadcrumb-item.active::before {
 
 .table-striped {
   font-size: 1rem;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .table-triped td {
