--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -10,6 +10,7 @@
 .btn-primary {
   background-color: $primary;
   border-color: $primary;
+
   &:hover,
   &:focus,
   &:active {
@@ -30,10 +31,10 @@
   color: #6c757d;
   border-top: 1px solid $gray-300;
   border-bottom: 1px solid $gray-300;
-  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.08) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.08) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.08) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#11000000',GradientType=0 );
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.08) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#11000000', GradientType=0);
 }
 
 a.dropdown-item:hover {
@@ -47,7 +48,7 @@ a.nav-link:hover {
 .breadcrumb {
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: .25rem;
-  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: .875rem;
   padding: 0rem 1rem;
 }
@@ -58,8 +59,9 @@ li.breadcrumb-item.active::before {
 
 .table-striped {
   font-size: 1rem;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
 .table-triped td {
   padding: 1px;
 }
@@ -95,10 +97,12 @@ a.dropdown-item {
     background-color: transparent;
     border: none;
   }
+
   .img-thumbnail {
     background-color: transparent;
   }
 }
+
 
 
 
