--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -82,7 +82,7 @@ blockquote.note {
 	color: $black
 }
 
-p.note {
+p.note, div.note {
   font-style: italic;
   background-color: $gray-300;
   border-radius: 0.25rem;
